# scaling-law-analysis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PROMPTS.md  README.md  TODO.md  chinchilla_numbers.md  pyproject.toml
.cursor/agents/: article-review.md  code-review.md  commiter.md  reviewer.md  technical-reviewer.md
.cursor/commands/: build.md  commit.md  deploy.md  push.md  sync.md  update.md
.github/workflows/: ci.yml  deploy.yml
data/isoflops/: isoflops.csv
data/isoflops/extract/: isoflops.csv
data/isoflops/llama3/: isoflops.csv
data/isoflops/marin_202603/: isoflops.csv
demo/: chinchilla_fit_methods.py  scaling_law_estimation.py  validate_fit_methods.py
docs/: build.md  deployment.md
docs/prompts/: approach2_extrapolation_demo.md
docs/references/: references.yaml
experiments/: experiment_1.py
prompts/: approach2_extrapolation_demo.md
results/article/: article.html  article_standalone.html  extrapolation_error_data.csv  index.html  method_comparison_max_errors.csv  method_comparison_raw.csv  off_center_extrapolation_data.csv  references.yaml  scaling_exponent_errors.html  scaling_parameter_errors.html
results/derivations/: scaling_exponent_errors.html
results/paper/: paper.tex  references.bib
results/post/: post.docx
specs/: AGENTS.md  article.md  build.md  derivations.md  experiments.md  paper.md  post.md  project.md  refactor_chinchilla.md  sync.md
src/scaling_law_analysis/: chinchilla.py  common.py  config.py  references.py
tests/: test_chinchilla.py  test_experiments.py  test_extrapolation.py  test_standalone.py
(+70 files in other folders)
